[package]
name = "sdl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.18.0"
specs-derive = "0.4.1"
vector2d = "2.2.0"

[dependencies.sdl2]
version = "0.35.2"
features = ["image", "ttf"]